Switched to Firebase

--- a/.env.example
+++ b/.env.example
@@ -1,60 +1,24 @@
-# -----------------------
-# AI provider keys
-# -----------------------
-# OpenAI API key
-OPENAI_API_KEY=REDACTED_VALUE
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
-# Google / Gemini API key (e.g. Maps / Google Cloud / Gemini usage)
-GEMINI_API_KEY=REDACTED_VALUE
+# Razorpay
+NEXT_PUBLIC_RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
 
-# Anthropic / Claude admin key
-CLAUDE_API_KEY=REDACTED_VALUE
+# AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
 
-# -----------------------
-# OAuth / Auth config
-# -----------------------
-# Google OAuth (for Google Sign-In)
-GOOGLE_CLIENT_ID=REDACTED_VALUE
-GOOGLE_CLIENT_SECRET=REDACTED_VALUE
+# Mapbox
+NEXT_PUBLIC_MAPBOX_TOKEN=
 
-# Microsoft OAuth (Azure AD / Microsoft identity)
-MICROSOFT_CLIENT_ID=REDACTED_VALUE
-MICROSOFT_CLIENT_SECRET=REDACTED_VALUE
-MICROSOFT_TENANT_ID=REDACTED_VALUE
-
-# GitHub OAuth
-GITHUB_ID=REDACTED_VALUE
-GITHUB_SECRET=REDACTED_VALUE
-
-# NextAuth / App URLs & secrets
-NEXTAUTH_URL=http://localhost:3000
-AUTH_URL=http://localhost:3000
-AUTH_TRUST_HOST=true
-AUTH_SECRET=REDACTED_VALUE
-
-# -----------------------
-# Payment providers (Razorpay)
-# -----------------------
-NEXT_PUBLIC_RAZORPAY_KEY_ID=REDACTED_VALUE
-NEXT_PUBLIC_RAZOR_SECRET_KEY=REDACTED_VALUE
-RAZORPAY_KEY_ID=REDACTED_VALUE
-RAZOR_SECRET_KEY=REDACTED_VALUE
-
-# -----------------------
-# Neon Auth / Neon stack (public + secret)
-# -----------------------
-NEXT_PUBLIC_STACK_PROJECT_ID=REDACTED_VALUE
-NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=REDACTED_VALUE
-STACK_SECRET_SERVER_KEY=REDACTED_VALUE
-
-# -----------------------
-# Database
-# -----------------------
-# Neon / PostgreSQL connection string
-DATABASE_URL=REDACTED_VALUE
-
-# -----------------------
-# Misc / Environment
-# -----------------------
-NEXT_PUBLIC_RAZORPAY_KEY_ID=REDACTED_VALUE  # (kept above in Payments section)
-# (Other environment constants below — add as needed)
+# AI Keys
+GEMINI_API_KEY=
+OPENAI_API_KEY=
