--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@octokit/rest": "^22.0.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@types/jszip": "^3.4.0",
     "@types/react-plotly.js": "^2.6.4",
     "@types/three": "^0.181.0",
     "ai": "^5.0.108",
@@ -33,6 +34,7 @@
     "framer-motion": "^12.23.24",
     "google-auth-library": "^10.5.0",
     "gsap": "^3.13.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "maath": "^0.10.8",
     "mathjs": "^15.1.0",
