--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@google-cloud/compute": "^6.6.0",
     "@google-cloud/storage": "^7.18.0",
     "@google/generative-ai": "^0.24.1",
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@nanostores/react": "github:ai/react",
     "@octokit/rest": "^22.0.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jszip": "^3.4.0",
     "@types/react-plotly.js": "^2.6.4",
     "@types/three": "^0.181.0",
     "ai": "^5.0.108",
     "bcryptjs": "^3.0.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "diff": "^8.0.2",
@@ -33,8 +36,9 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "google-auth-library": "^10.5.0",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "jszip": "^3.10.1",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.554.0",
     "maath": "^0.10.8",
     "mathjs": "^15.1.0",
