--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-plotly.js": "^2.6.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
