--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -2,7 +2,7 @@
     "name": "mlforge-studio",
     "displayName": "MLForge Studio",
     "description": "Real-time collaboration with MLForge Studio - sync code, share cursors, and push to cloud",
-    "version": "0.1.3",
+    "version": "0.1.6",
     "publisher": "mlforge",
     "engines": {
         "vscode": "^1.80.0"
@@ -18,7 +18,9 @@
         "ai",
         "automl"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "*"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
